@@ -1,3 +1,15 @@
+2014-05-01  Steve Ellcey  <sellcey@mips.com>
+
+	* include/longlong.h: Use 'defined()' to check __mips16.
+
+2014-04-30  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* longlong.h (__i386__): Remove W_TYPE_SIZE==64 handling.
+
+2014-04-22  Yufeng Zhang  <yufeng.zhang@arm.com>
+
+	* longlong.h: Merge from glibc.
+
 2014-01-21  Tom Tromey  <tromey@redhat.com>
 
 	* ansidecl.h (ANSI_PROTOTYPES, PTRCONST, LONG_DOUBLE, PARAMS)
